More Foundations code

--- a/content/Foundations.ipynb
+++ b/content/Foundations.ipynb
@@ -34,14 +34,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": "Hello, World!\n"
-        }
-      ],
-      "execution_count": 1
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "499e112b-ac35-4f8c-8ef5-2dce8fe6d057",
@@ -62,17 +56,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "execution_count": 12,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "1"
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 12
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "98beee98-d3ac-4f49-852b-ca0a1157db19",
@@ -81,17 +66,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "execution_count": 28,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "'hi'"
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 28
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "68e702c3-84b6-4b52-a235-0c3c195104ce",
@@ -106,14 +82,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": "Hello\n"
-        }
-      ],
-      "execution_count": 17
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "fddcea01-c54b-46fc-9aa6-9a4479da8c6c",
@@ -122,16 +92,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": "'Hello again'"
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 27
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "b3cb1e63",
@@ -146,17 +108,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "execution_count": 4,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "'Gregg'"
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 4
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "a2dbdfce-584d-437c-abc0-7cc6636f6afc",
@@ -165,17 +118,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "execution_count": 30,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "1"
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 30
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "965a113f-4c6d-44bd-b445-4808279ecc8d",
@@ -190,14 +134,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": "Gregg\n"
-        }
-      ],
-      "execution_count": 22
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "a437b320-d9fd-492d-a9ab-144e94d11d8c",
@@ -206,14 +144,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": "Hello, Gregg\n"
-        }
-      ],
-      "execution_count": 23
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "a715cca2-b362-4689-a967-7387737da450",
@@ -228,14 +160,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdin",
-          "text": " Bob\n"
-        }
-      ],
-      "execution_count": 24
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "f0adba9f-4fac-47d8-aaf5-1097744b78f7",
@@ -245,14 +171,8 @@
         "trusted": true,
         "scrolled": true
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": "Hello, Bob\n"
-        }
-      ],
-      "execution_count": 26
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "dc4c34b6-1083-48db-98e0-00201f08da33",
@@ -267,17 +187,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "execution_count": 29,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "'Smith'"
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 29
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "97a8e75f-4069-476d-bc8b-ed86aa9d3cb9",
@@ -299,14 +210,8 @@
         "trusted": true,
         "scrolled": true
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": "<class 'str'>\n"
-        }
-      ],
-      "execution_count": 35
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "dbb84b9c-2c28-49c6-806c-d5b5dbe09f7b",
@@ -316,7 +221,7 @@
         "trusted": true
       },
       "outputs": [],
-      "execution_count": 34
+      "execution_count": null
     },
     {
       "id": "a57f2186-590c-489e-ac74-591c9539eea9",
@@ -331,17 +236,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "execution_count": 33,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "42"
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 33
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "e87c0d3d-0d4b-47e6-bd70-04ef218efeb7",
@@ -350,17 +246,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "execution_count": 32,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "3.14"
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 32
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "3406c999-b34d-4edb-a320-d3b4bb5a516a",
@@ -375,14 +262,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": "False\n"
-        }
-      ],
-      "execution_count": 36
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "89473358-ef34-42bb-b660-06f0273e7c6e",
@@ -403,19 +284,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdin",
-          "text": " 7\n"
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": "The area of the circle is 153.93791\n"
-        }
-      ],
-      "execution_count": 40
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "7adf3384-e352-4078-bb1d-9d012fa6b67c",
@@ -430,14 +300,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": "True\n"
-        }
-      ],
-      "execution_count": 41
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "d07f170d-9cf5-4be5-8a59-34a796ad80f9",
@@ -446,17 +310,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "execution_count": 46,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "True"
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 46
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "97833907-e162-475e-a98b-d2a7a1a0aab8",
@@ -465,17 +320,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "execution_count": 42,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "True"
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 42
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "81eefed2-4214-4dd5-8ce8-49123072afbd",
@@ -490,14 +336,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": "True\nFalse\n"
-        }
-      ],
-      "execution_count": 47
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "0e13567e-963f-48d7-914d-88d6b5875c92",
@@ -506,17 +346,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "execution_count": 48,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "False"
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 48
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "1458cf7f-2a36-4890-8148-76c6695a5a0a",
@@ -525,17 +356,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "execution_count": 49,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "True"
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 49
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "5a8256d7-2ee7-4869-b267-50d0ad3465f9",
@@ -544,17 +366,8 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "execution_count": 50,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "True"
-          },
-          "metadata": {}
-        }
-      ],
-      "execution_count": 50
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "db3a5072-9dc8-482c-ac66-5e054cce7664",
@@ -563,7 +376,95 @@
       "metadata": {}
     },
     {
-      "id": "2680fbb6-8f02-4725-bcdd-512231b93043",
+      "id": "d5bf12b3-d8e8-4894-b33e-5e1b10442770",
+      "cell_type": "markdown",
+      "source": "## if-then conditionals",
+      "metadata": {}
+    },
+    {
+      "id": "d97fafae-d339-4090-a385-f74eb578522d",
+      "cell_type": "code",
+      "source": "x = 0\nif x == 0:\n    name = 'Bob'\nelse:\n    name = 'Lisa'\nname",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "id": "a38eebc2-aafb-418c-92b1-aa3993a36f71",
+      "cell_type": "code",
+      "source": "x = 1\nif x == 0:\n    name = 'Bob'\nelif x == 1:\n    name = 'Lisa'\nelse:\n    name = 'Pat'\nname",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "id": "ff01a12d-327d-4efb-9838-195225f51ae4",
+      "cell_type": "code",
+      "source": "x = 2\nif x == 0:\n    name = 'Bob'\nelif x == 1:\n    name = 'Lisa'\nelse:\n    name = 'Pat'\nname",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "id": "51ab4359-7c1f-4895-a538-15cc54cfa931",
+      "cell_type": "markdown",
+      "source": "## for loops",
+      "metadata": {}
+    },
+    {
+      "id": "e21d159b-f9e6-4de6-b0af-d492fcad9b95",
+      "cell_type": "code",
+      "source": "for i in range(5):\n    print(i)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "id": "5a402a78-e544-4d3d-b21a-8b9dc8c8009d",
+      "cell_type": "code",
+      "source": "names = ['Bob', 'Lisa', 'Pat']   # this is a Python list, much like an array\nfor name in names:\n    print(name)",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "id": "4eaa2170-00e7-4b34-9910-f71afda29e9c",
+      "cell_type": "markdown",
+      "source": "## while loops",
+      "metadata": {}
+    },
+    {
+      "id": "ffb3cbd3-d30b-414f-8e75-525fc7f75980",
+      "cell_type": "code",
+      "source": "counter = 0\nwhile counter < 10:\n    print(counter)\n    counter += 1      # this increments counter \"in place\" by 1 each time",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "id": "8c14d89d-40c2-4837-986f-63e35eda5f12",
+      "cell_type": "code",
+      "source": "counter = 0\nwhile counter < 10:\n    print(counter)\n    if counter % 2 == 1:    # this is the modulo operator, returning the remainder after dividing\n        break         # break terminates the innermost loop\n    counter += 1      # this increments counter \"in place\" by 1 each time",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "id": "002719ff-a9b3-4a39-9163-18efcfc53ede",
       "cell_type": "code",
       "source": "",
       "metadata": {
