Added a couple exercises

--- a/content/Foundations.ipynb
+++ b/content/Foundations.ipynb
@@ -412,6 +412,16 @@
       "execution_count": null
     },
     {
+      "id": "8d058cf4-e449-4c20-a4ef-a295f2498da7",
+      "cell_type": "code",
+      "source": "# more compact one-line version\nx = 0\nname = 'Bob' if x == 1 else 'Lisa'\nname",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
+    },
+    {
       "id": "51ab4359-7c1f-4895-a538-15cc54cfa931",
       "cell_type": "markdown",
       "source": "## for loops",
@@ -464,9 +474,53 @@
       "execution_count": null
     },
     {
-      "id": "002719ff-a9b3-4a39-9163-18efcfc53ede",
+      "id": "49faf1f1-adb8-4233-a713-d88941e37bff",
+      "cell_type": "markdown",
+      "source": "# Exercises",
+      "metadata": {}
+    },
+    {
+      "id": "f77a0854-4d85-4c8c-a398-9253503a37ce",
+      "cell_type": "markdown",
+      "source": "## Exercise 1\nWrite a script that does the following:\n1. Asks the user for two numbers.\n2. Prints their sum, difference, product, and quotient.\n\n### Hints:\n1. Recall the function used to gather user input.\n2. Refer to the arithmetic operators",
+      "metadata": {}
+    },
+    {
+      "id": "40a8a587-c60a-4fd5-8658-4bd154337f61",
+      "cell_type": "markdown",
+      "source": "### possible solution",
+      "metadata": {
+        "jp-MarkdownHeadingCollapsed": true
+      }
+    },
+    {
+      "id": "756b499b-96eb-4f64-b02e-c8986dc7a0fa",
       "cell_type": "code",
-      "source": "",
+      "source": "a = float(input(\"Enter first number: \"))\nb = float(input(\"Enter second number: \"))\nprint(\"Sum:\", a + b)\nprint(\"Difference:\", a - b)\nprint(\"Product:\", a * b)\nprint(\"Quotient:\", a / b if b != 0 else \"undefined (division by zero)\")",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "id": "73ec57a1-0a04-467a-84c1-003a05d9f50b",
+      "cell_type": "markdown",
+      "source": "## Exercise 2\nBuild a Number Guessing Game:\n1. Generate a random number between 1–10.\n2. Let the user guess until they get it right.\n3. Give hints if the guess is too high/low.\n\n### Hints:\n1. Start with `import random` to import the package that allows us to generate random numbers.\n2. Use `random.randint(1, 10)` to generate a random integer between 1 and 10, inclusive.\n3. Use a loop to keep prompting until the user guesses correctly.",
+      "metadata": {}
+    },
+    {
+      "id": "3bc5d2c8-9a4b-402a-85b6-e8f5d52c61a6",
+      "cell_type": "markdown",
+      "source": "### possible solution",
+      "metadata": {
+        "jp-MarkdownHeadingCollapsed": true
+      }
+    },
+    {
+      "id": "52da623a-20a1-4869-a89e-412e20c10b3e",
+      "cell_type": "code",
+      "source": "import random\nsecret = random.randint(1, 10)\nwhile True:\n    guess = int(input(\"Guess a number (1-10): \"))\n    if guess == secret:\n        print(\"You got it!\")\n        break\n    print(\"Too low\" if guess < secret else \"Too high\")",
       "metadata": {
         "trusted": true
       },
