Tweaked exercise section a bit

--- a/content/Foundations.ipynb
+++ b/content/Foundations.ipynb
@@ -482,13 +482,33 @@
     {
       "id": "f77a0854-4d85-4c8c-a398-9253503a37ce",
       "cell_type": "markdown",
-      "source": "## Exercise 1\nWrite a script that does the following:\n1. Asks the user for two numbers.\n2. Prints their sum, difference, product, and quotient.\n\n### Hints:\n1. Recall the function used to gather user input.\n2. Refer to the arithmetic operators",
+      "source": "## Exercise 1\nWrite a script that does the following:\n1. Asks the user for two numbers\n2. Prints their sum, difference, product, and quotient\n\n### Hints:\n1. Recall the function used to gather user input and save it in a variable\n2. Refer to the arithmetic operators we looked at earlier",
       "metadata": {}
+    },
+    {
+      "id": "ca0e57d2-f31e-42b5-8570-ad32429f92f8",
+      "cell_type": "code",
+      "source": "# PUT YOUR SOLUTION HERE\n",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "id": "5e063dd0-78c2-4463-87ea-df406e630661",
+      "cell_type": "code",
+      "source": "",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "40a8a587-c60a-4fd5-8658-4bd154337f61",
       "cell_type": "markdown",
-      "source": "### possible solution",
+      "source": "### Possible solution to Exercise 1\nPlease don't unhide the cell below until you are ready to view the solution.",
       "metadata": {
         "jp-MarkdownHeadingCollapsed": true
       }
@@ -506,13 +526,33 @@
     {
       "id": "73ec57a1-0a04-467a-84c1-003a05d9f50b",
       "cell_type": "markdown",
-      "source": "## Exercise 2\nBuild a Number Guessing Game:\n1. Generate a random number between 1–10.\n2. Let the user guess until they get it right.\n3. Give hints if the guess is too high/low.\n\n### Hints:\n1. Start with `import random` to import the package that allows us to generate random numbers.\n2. Use `random.randint(1, 10)` to generate a random integer between 1 and 10, inclusive.\n3. Use a loop to keep prompting until the user guesses correctly.",
+      "source": "## Exercise 2\nBuild a Number Guessing Game:\n1. Generate a random number between 1 and 10\n2. Let the user keep guessing until they get it right\n3. Give a hint each time if the guess is too high or too low\n\n### Hints:\n1. Start with `import random` to import the package that allows us to generate random numbers\n2. Use `random.randint(1, 10)` to generate a random integer between 1 and 10, inclusive\n3. Use a loop to keep prompting until the user guesses correctly",
       "metadata": {}
+    },
+    {
+      "id": "0301ddd0-12a3-4a98-aa54-944b7e8f119e",
+      "cell_type": "code",
+      "source": "# PUT YOUR SOLUTION HERE\nimport random\n# put more code here...\n",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "id": "8b4d7bfd-68a6-40f9-bbb9-95d698b99e92",
+      "cell_type": "code",
+      "source": "",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
     },
     {
       "id": "3bc5d2c8-9a4b-402a-85b6-e8f5d52c61a6",
       "cell_type": "markdown",
-      "source": "### possible solution",
+      "source": "### Possible solution to Exercise 2\nPlease don't unhide the cell below until you are ready to view the solution.",
       "metadata": {
         "jp-MarkdownHeadingCollapsed": true
       }
